# project_a

./: CMakeLists.txt  README.md
Components/: AnimationComponent.cpp  AnimationComponent.h  MovementComponent.cpp  MovementComponent.h
Config/: gamestate_keybinds.ini  window.ini
Entites/: Boss.cpp  Boss.h  Entity.cpp  Entity.h  FireStream.cpp  FireStream.h  Player.cpp  Player.h  World.cpp  World.h
Header/: Game.h
Resource Files/: Button.cpp  Button.h
Src/: Game.cpp  Map.cpp  Map.h  main.cpp
States/: EditorState.cpp  EditorState.h  EndGameMenu.cpp  EndGameMenu.h  EndScreen.cpp  EndScreen.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  PauseMenu.cpp  PauseMenu.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h
box2d-main/src/collision/: b2_collide_edge.cpp
